4-istio-s2s/policies/authz.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz
  namespace: default
spec:
  selector:
    matchLabels:
      gateway.istio.io/managed: istio.io-mesh-controller
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/default/sa/grpca
      to:
      - operation:
          methods:
          - POST
